# pdf-viewer-core

./: .env.example  .gitignore  README.md  memo.md  pdf-viewer-core.onedir.spec  pdf-viewer-core.spec  pyproject.toml  requirements.txt
apps/: main.py
scripts/: dev.ps1
src/pdf_viewer_core/: core.py
src/pdf_viewer_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pdf_viewer_core/services/: recent_files.py
src/pdf_viewer_core/ui/: main_window.py  page_rotation.py  page_widget.py  pdf_scroll_view.py
tests/: test_smoke.py
